codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_empty_redo_stays_normal.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› bc                                                        "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                             上下文剩余 100% | Vim: Normal  " Hidden by multi-width symbols: [(30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
